--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,15 @@
 .field {
-    background-color: #777373;
     border-color: black;
-    padding-right: 300px;
-    text-shadow: black;
-    font-size: 32px;
+    font-size: 30px;
     margin-top: 56px;
+    background-color: #4d4848;
+    border-style: hidden;
+    border-radius: 90px;
+    text-align: center;
+    width: 1000px;
 }
 
 .block {
-    background-color: #4d4848;
     box-shadow: black;
     box-sizing: border-box;
     font-size: 32px;
@@ -16,9 +17,12 @@
     line-height: 36px;
 }
  body {
-     background-color: #4d4848;
+     background-image: url("background.jpg");
+     background-size: cover;
      text-align: center;
      text-space: 100px;
+     text-shadow:  2px 2px 2px black;
+     color: #adadad;
  }
 
  .control {
@@ -29,12 +33,14 @@
      width: 32px;
      height: 32px;
      background-color: #a9ea6a;
-     border-color: green;
+     border-style: hidden;
+     border-radius: 90px;
  }
 
  .remove {
      width: 32px;
      height: 32px;
      background-color: #99413b;
-     border-color: darkred;
+     border-style: hidden;
+     border-radius: 90px;
  }
