--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@
      border-style: hidden;
      border-radius: 90px;
      box-shadow: #15081c 2px 2px 2px 3px;
+     margin-top: 10px;
  }
 
  .remove {
