--- a/css/style.css
+++ b/css/style.css
@@ -50,4 +50,8 @@
      border-style: hidden;
      border-radius: 90px;
      box-shadow: #15081c 2px 2px 2px 3px;
+     margin-top: 10px;
+ }
+ .array {
+     line-height: 40px;
  }
